<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SaveLoanActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <!-- ITEM DATA -->

        <TextView
            android:id="@+id/text_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="6dp"
            android:paddingLeft="6dp"
            android:text="@string/item_data"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#33b5e5" />
        
        <View 
            android:id="@+id/view_divider_item"
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:layout_margin="6dp"
            android:layout_below="@+id/text_item"
            android:background="#33b5e5"/>

        <CheckBox
            android:id="@+id/check_own"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_divider_item"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp" />
        
        <TextView
            android:id="@+id/text_own"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_divider_item"
            android:layout_toRightOf="@id/check_own"
            android:layout_marginTop="7dp"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:text="@string/text_own" />
        
        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_own"
            android:layout_marginLeft="10dp" />
        
        <TextView
            android:id="@+id/text_date_format"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/spinner_type"
            android:layout_toRightOf="@id/spinner_type"
            android:layout_marginLeft="15dp"
            android:onClick="onShowDateDialog"
            android:textSize="15sp"
            style="?android:attr/spinnerStyle" />

        <EditText
            android:id="@+id/edit_item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_type"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/item_desc"
            android:inputType="text"
            android:textSize="15sp" />      
        
        <!-- PERSON DATA -->

        <TextView
            android:id="@+id/text_get_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/edit_item_desc"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:padding="6dp"
            android:text="@string/contact_data"
            android:textSize="18sp"
            android:textStyle="bold" 
            android:textColor="#33b5e5" />

        <ImageButton
            android:id="@+id/button_get_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_item_desc"
            android:layout_marginTop="11dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@id/text_get_contact"
            android:contentDescription="@string/search"
            android:onClick="onShowContactPicker"
            android:src="@drawable/search_itens"
            android:background="@android:color/background_light"/>
        
        <View 
            android:id="@+id/view_divider_contact"
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:layout_below="@+id/text_get_contact"
            android:layout_margin="6dp"
            android:background="#33b5e5"/>

        <EditText
            android:id="@+id/edit_person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/view_divider_contact"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_person_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/edit_person_name"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_person_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/edit_person_email"
            android:hint="@string/phone"
            android:inputType="phone" 
            android:textSize="15sp" />

    </RelativeLayout>

</ScrollView>